--- a/custom.scss
+++ b/custom.scss
@@ -37,7 +37,7 @@ $headings-font-weight:  400 !default;
 /*-- scss:rules --*/
 
 h1 {
-    font-family: 'Major Mono Display', monospace;
+    font-family: $mainfont;
     word-spacing: 10%;
 }
 
@@ -47,7 +47,7 @@ h2, h3, h4 {
 }
 
 h5, h6 {
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: $font-family-sans-serif;
 }
 
 body {
